--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -2,12 +2,15 @@ name: PEP-8
 
 on:
   push:
-    branches: [ main ]
-  pull_request:
     branches:
-       - main
-       - releases/*
-
+      -'main'
+      -'second-homework'
+      -'second-homework-conflict'
+  pull_request:
+      branches:
+        -'main'
+        -'second-homework'
+        -'second-homework-conflict'
 jobs:
   build:
 
